Başlık işlemleri apılsı dropdown bölümü eklendi kategori ve yazar kısımına yani yeni ir başlık eklenirken dropdown şeklinde gelecekler şablonlar ayarlandı

--- a/MvcProject/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProject/Views/Shared/_AdminLayout.cshtml
@@ -84,19 +84,19 @@
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">
+                                <a href="/AdminCategory/Index/" class="nav-link                     ">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
                                     <p>Kategoriler</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/Heading/Index/" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>Başlıklar</p>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/Writer/Index/" class="nav-link">
                                     <i class="nav-icon fas fa-copy"></i>
                                     <p>Yazarlar</p>
                                 </a>
