--- a/MvcProject/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProject/Views/Shared/_AdminLayout.cshtml
@@ -131,7 +131,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/About/Index" class="nav-link">
                                     <i class="nav-icon fas fa-tree"></i>
                                     <p>Hakkımızda</p>
                                 </a>
