--- a/MvcProject/Views/Message/Sendbox.cshtml
+++ b/MvcProject/Views/Message/Sendbox.cshtml
@@ -5,14 +5,10 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
 <!DOCTYPE html>
 <html>
-
 <body class="hold-transition sidebar-mini">
 
-    <!-- Content Wrapper. Contains page content -->
-    <!-- Content Header (Page header) -->
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -26,13 +22,13 @@
                     </ol>
                 </div>
             </div>
-        </div><!-- /.container-fluid -->
+        </div>
     </section>
-    <!-- Main content -->
+
     <section class="content">
         <div class="row">
             @Html.Action("MessageListMenu", "Contact")
-            <!-- /.col -->
+
             <div class="col-md-9">
                 <div class="card card-primary card-outline">
                     <div class="card-header">
@@ -47,12 +43,10 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.card-tools -->
                     </div>
-                    <!-- /.card-header -->
+
                     <div class="card-body p-0">
                         <div class="mailbox-controls">
-                            <!-- Check all button -->
                             <button type="button" class="btn btn-default btn-sm checkbox-toggle">
                                 <i class="far fa-square"></i>
                             </button>
@@ -61,7 +55,6 @@
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
                             </div>
-                            <!-- /.btn-group -->
                             <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
                             <div class="float-right">
                                 1-50/200
@@ -69,10 +62,9 @@
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
                                 </div>
-                                <!-- /.btn-group -->
                             </div>
-                            <!-- /.float-right -->
                         </div>
+
                         <div class="table-responsive mailbox-messages">
                             <table class="table table-hover table-striped">
                                 <tbody>
@@ -85,25 +77,37 @@
                                                     <label for="check1"></label>
                                                 </div>
                                             </td>
-                                            <td class="mailbox-star"><a href="/Contact/GetContactDetails/@item.MessageID"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a href="/Contact/GetContactDetails/@item.MessageID">@item.ReceiverMail</a></td>
+                                            <td class="mailbox-star">
+                                                <a href="/Message/GetSendboxMessageDetails/@item.MessageID">
+                                                    <i class="fas fa-star text-warning"></i>
+                                                </a>
+                                            </td>
+                                            <td class="mailbox-name">
+                                                <a href="/Message/GetSendboxMessageDetails/@item.MessageID">
+                                                    @(item.ReceiverMail ?? "Alıcı yok")
+                                                </a>
+                                            </td>
                                             <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.MessageContent.Substring(0, 30)...
+                                                <b>@(item.Subject ?? "Konu yok")</b> -
+                                                @(
+                                                    string.IsNullOrEmpty(item.MessageContent)
+                                                    ? "İçerik yok"
+                                                    : item.MessageContent.Length > 30
+                                                        ? item.MessageContent.Substring(0, 30) + "..."
+                                                        : item.MessageContent
+                                                )
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">5 mins ago</td>
+                                            <td class="mailbox-date">@(((DateTime)item.MessageDate).ToString("dd-MMM-yyyy", new System.Globalization.CultureInfo("tr-TR")))</td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
-                            <!-- /.table -->
                         </div>
-                        <!-- /.mail-box-messages -->
                     </div>
-                    <!-- /.card-body -->
+
                     <div class="card-footer p-0">
                         <div class="mailbox-controls">
-                            <!-- Check all button -->
                             <button type="button" class="btn btn-default btn-sm checkbox-toggle">
                                 <i class="far fa-square"></i>
                             </button>
@@ -112,7 +116,6 @@
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
                                 <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
                             </div>
-                            <!-- /.btn-group -->
                             <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
                             <div class="float-right">
                                 1-50/200
@@ -120,17 +123,13 @@
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
                                     <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
                                 </div>
-                                <!-- /.btn-group -->
                             </div>
-                            <!-- /.float-right -->
                         </div>
                     </div>
+
                 </div>
-                <!-- /.card -->
             </div>
-            <!-- /.col -->
         </div>
-        <!-- /.row -->
     </section>
 
 </body>
