--- a/MvcProject/Views/Contact/Index.cshtml
+++ b/MvcProject/Views/Contact/Index.cshtml
@@ -91,7 +91,9 @@
                                             <b>@item.Subject</b> - @item.Message.Substring(0,30)...
                                         </td>
                                         <td class="mailbox-attachment"></td>
-                                        <td class="mailbox-date"> @(((DateTime)item.).ToString("dd-MM-yyyy"))</td>
+                                        <td class="mailbox-date">
+                                            @(((DateTime)item.ContactDate).ToString("dd-MMM-yyyy", new System.Globalization.CultureInfo("tr-TR")))
+                                        </td>
                                     </tr>
                                     }
                                 </tbody>
