--- a/MvcProject/Views/Heading/Index.cshtml
+++ b/MvcProject/Views/Heading/Index.cshtml
@@ -123,7 +123,8 @@
                                 </a>
                                 <br />
                                 <small>
-                                    @(((DateTime)item.HeadingDate).ToString("dd-MM-yyyy"))
+                                    @(((DateTime)item.HeadingDate).ToString("dd-MMM-yyyy", new System.Globalization.CultureInfo("tr-TR")))
+
                                 </small>
                             </td>
                             <td>
