--- a/MvcProject/Views/Message/NewMessage.cshtml
+++ b/MvcProject/Views/Message/NewMessage.cshtml
@@ -1,111 +1,70 @@
 ﻿@model EntityLayer.Concrete.Message
 @{
     ViewBag.Title = "NewMessage";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml"; // layout kullanıyorsun, onu bırak
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Compose Message</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Font Awesome -->
-    <!-- Theme style -->
-    <!-- summernote -->
-    <link rel="stylesheet" href="~/AdminLTE-3.0.4/plugins/summernote/summernote-bs4.css">
-
-    <script src="~/AdminLTE-3.0.4/plugins/summernote/summernote.min.js"></script>
-    <!-- Google Font: Source Sans Pro -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-</head>
-<body class="hold-transition sidebar-mini">
-
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>Yeni Mesaj Sayfası</h1>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Compose</li>
-                    </ol>
-                </div>
+<!-- HTML <html>, <head>, <body> etiketleri yok! -->
+<!-- Sadece sayfa içeriği -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Yeni Mesaj Sayfası</h1>
             </div>
-        </div><!-- /.container-fluid -->
-    </section>
-    <!-- Main content -->
-    <section class="content">
-        <div class="container-fluid">
-            <div class="row">
-                @Html.Action("MessageListMenu", "Contact")
-                <!-- /.col -->
-                <div class="col-md-9">
-                    <div class="card card-primary card-outline">
-                        <div class="card-header">
-                            <h3 class="card-title">Yeni Mesaj Oluştur</h3>
-                        </div>
-                        <!-- /.card-header -->
-                        @using (Html.BeginForm("NewMessage", "Message", FormMethod.Post))
-                        {
-                            <div class="card-body">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(x => x.ReceiverMail, new { @class = "form-control", placeholder = "Alıcı:" })
-                                </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active">Compose</li>
+                </ol>
+            </div>
+        </div>
+    </div><!-- /.container-fluid -->
+</section>
 
-                                <div class="form-group">
-                                    @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", placeholder = "Konu:" })
-                                </div>
-
-                                <div class="form-group">
-                                    @Html.TextAreaFor(x => x.MessageContent, new { @class = "form-control", id = "compose-textarea", style = "height:300px" })
-                                </div>
-                            </div>
-
-                            <div class="card-footer">
-                                <div class="float-right">
-                                    <input type="submit" name="submitButton" value="Taslaklara Kaydet" class="btn btn-default" />
-                                    <input type="submit" name="submitButton" value="Gönder" class="btn btn-primary" />
-                                </div>
-                                <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> İptal Et</button>
-                            </div>
-                        }
-
-                        <!-- /.card-footer -->
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            @Html.Action("MessageListMenu", "Contact")
+            <div class="col-md-9">
+                <div class="card card-primary card-outline">
+                    <div class="card-header">
+                        <h3 class="card-title">Yeni Mesaj Oluştur</h3>
                     </div>
-                    <!-- /.card -->
+                    @using (Html.BeginForm("NewMessage", "Message", FormMethod.Post))
+                    {
+                        <div class="card-body">
+                            <div class="form-group">
+                                @Html.TextBoxFor(x => x.ReceiverMail, new { @class = "form-control", placeholder = "Alıcı:" })
+                            </div>
+
+                            <div class="form-group">
+                                @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", placeholder = "Konu:" })
+                            </div>
+
+                            <div class="form-group">
+                                @Html.TextAreaFor(x => x.MessageContent, new { @class = "form-control", id = "compose-textarea", style = "height:300px" })
+                            </div>
+                        </div>
+
+                        <div class="card-footer">
+                            <div class="float-right">
+                                <input type="submit" name="submitButton" value="Taslaklara Kaydet" class="btn btn-default" />
+                                <input type="submit" name="submitButton" value="Gönder" class="btn btn-primary" />
+                            </div>
+                            <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> İptal Et</button>
+                        </div>
+                    }
                 </div>
-                <!-- /.col -->
             </div>
-            <!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
-    <!-- /.content-wrapper -->
-    <!-- Control Sidebar -->
-    <!-- /.control-sidebar -->
-    <!-- ./wrapper -->
-    <!-- jQuery -->
-    <script src="~/AdminLTE-3.0.4/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/AdminLTE-3.0.4/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/AdminLTE-3.0.4/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/AdminLTE-3.0.4/dist/js/demo.js"></script>
-    <!-- Summernote -->
-    <script src="~/AdminLTE-3.0.4/plugins/summernote/summernote-bs4.min.js"></script>
-    <!-- Page Script -->
+        </div>
+    </div>
+</section>
+
+@*@section Scripts {
     <script>
         $(function () {
-            //Add text editor
-            $('#compose-textarea').summernote()
-        })</script>
-</body>
-</html>
+            $('#compose-textarea').summernote();
+        });
+    </script>
+}*@
